<resources>
    <!--<string name="app_name">Spendemon</string>-->

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gotta_track_em_all">...gotta track \'em all</string>
    <string name="enter">Enter</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_recovery_number">Enter recovery number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="button">Save</string>
    <string name="name_">Name:</string>
    <string-array name="currency">
        <item>Euro</item>
        <item>Rupees</item>
        <item>Dollars</item>
    </string-array>
    <string-array name="language">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="Expenses">
        <item>---</item>
        <item>Rent</item>
        <item>Insurance</item>
        <item>Groceries</item>
        <item>Travel</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="Incomes">
        <item>---</item>
        <item>Allowance</item>
        <item>Salary</item>
        <item>Bonds</item>
        <item>Bonus</item>
        <item>Gift</item>
    </string-array>
    <string-array name="AllCategories">
        <item>---</item>
        <item>Allowance</item>
        <item>Salary</item>
        <item>Bonds</item>
        <item>Bonus</item>
        <item>Gift</item>
        <item>Rent</item>
        <item>Insurance</item>
        <item>Groceries</item>
        <item>Travel</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="PaymentMethods">
        <item>---</item>
        <item>Cash</item>
        <item>Bank Transfer</item>
        <item>Card</item>
        <item>PayPal</item>
        <item>GooglePay</item>
        <item>ApplePay</item>
    </string-array>
    <string-array name="type">
        <item>---</item>
        <item>Incomes</item>
        <item>Expenses</item>
    </string-array>

    <string name="title_activity_summary">Summary</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="_equal">=</string>
    <string name="_divide">/</string>
    <string name="_multi">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_c">C</string>
    <string name="category">Category</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <!--<string name=""-->
    <string name="Type">Type</string>
    <string name="app_name">SPENDEMON</string>
    <string name="usernameText1">Username</string>
    <string name="passwordText1">Password</string>
    <string name="LogIn1">Log In</string>
    <string name="signUp1">Sign Up</string>
    <string name="add_date">Select Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="delete">Delete</string>
    <string name="confirm_dialog_message">User Account exits. Do you want to make new user</string>
    <string name="confirm_dialog_title">Are you sure</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="chart">Chart</string>
    <string name="categoryImageDesc">Image of the Category selected</string>
    <string name="typeImageDesc">Image of type of transaction</string>
    <string name="paymentImageDesc">Image for payment method</string>
    <string name="notes">Notes:</string>
    <!--<string name="signUp1">Sign Up</string>-->

    <!--drawable menu-->
    <string name="item_daily">Daily</string>
    <string name="item_weekly">Weekly</string>
    <string name="item_monthly">Monthly</string>
    <string name="item_total">All</string>
    <string name="item_share">Share</string>
    <string name="item_contactUs">Contact Us</string>
    <string name="item_trendLine">Expense History Chart</string>
    <string name="item_balance">Overview</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="fragment_daily">Daily Fragment</string>
    <string name="fragment_weekly">Weekly Fragment</string>
    <string name="fragment_monthly">Monthly Fragment</string>
    <string name="fragment_total">All Fragment</string>


    <string name="total_balance_text">Total Balance:</string>

    <string name="item_right_setting">Settings</string>
    <string name="item_right_calculator">Calculator</string>
    <string name="item_right_currency">Currency</string>
    <string name="item_right_aboutUs">About Us</string>
    <string name="item_right_header2">App setting</string>
    <string name="item_right_header1">Tools</string>
    <string name="enter_month">Enter Month</string>
    <string name="month">Month: </string>
    <string name="date001">DATE</string>
    <string name="enter_date">Enter date</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="go">Go</string>
    <string name="month001">Month</string>
    <string name="select_month">Select month</string>
    <string name="delete_all">Delete All</string>
    <string name="currency">Currency</string>
    <string name="del_msg">All the data will be deleted</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="setting_report">Download transaction history</string>

    <string name="trendLine_yAxis">Amount</string>
    <string name="trendLine_xAxis">Number of Transactions</string>
    <string name="threshold_text">Set a threshold for your expenses in this field: </string>
    <string name="rs_item">\u20B9</string>

</resources>
