<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">


    <group android:checkableBehavior="single">
        <item android:title="@string/item_right_header1">
            <menu>
                <item
                    android:id="@+id/nav_currency"
                    android:icon="@drawable/ic_monetization"
                    android:title="@string/item_right_currency" />
                <item
                    android:id="@+id/nav_Calculator"
                    android:icon="@drawable/ic_calculator"
                    android:title="@string/item_right_calculator" />
            </menu>
        </item>

    </group>


    <item android:title="@string/item_right_header2">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/item_right_setting" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_about_us"
                android:title="@string/item_right_aboutUs" />
        </menu>
    </item>


</menu>