<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoTextView"
        android:enabled="false"
        android:gravity="bottom"
        android:lines="2"
        android:maxLines="2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSeven"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:text="@string/_7"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonEight"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_toEndOf="@id/buttonSeven"
        android:text="@string/_8"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonNine"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_toEndOf="@id/buttonEight"
        android:text="@string/_9"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonFour"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSeven"
        android:text="@string/_4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonFive"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEight"
        android:layout_alignEnd="@id/buttonEight"
        android:text="@string/_5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSix"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonNine"
        android:layout_alignEnd="@id/buttonNine"
        android:text="@string/_6"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonOne"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonFour"
        android:text="@string/_1"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonTwo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/buttonEight"
        android:layout_below="@id/buttonFive"
        android:text="@string/_2"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonThree"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/buttonNine"
        android:layout_below="@id/buttonSix"
        android:text="@string/_3"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonDot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonOne"
        android:text="@string/_dot"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonZero"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/buttonEight"
        android:layout_below="@id/buttonTwo"
        android:text="@string/_0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonEqual"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/buttonNine"
        android:layout_below="@id/buttonThree"
        android:text="@string/_equal"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonDivide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonNine"
        android:layout_toEndOf="@id/buttonNine"
        android:text="@string/_divide"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMultiply"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonSix"
        android:layout_toEndOf="@id/buttonSix"
        android:text="@string/_multi"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSubtract"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonThree"
        android:layout_toEndOf="@id/buttonThree"
        android:text="@string/_minus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonEqual"
        android:layout_toEndOf="@id/buttonEqual"
        android:text="@string/_plus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/buttonAdd"
        android:layout_below="@id/buttonAdd"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/_c"
        android:textSize="20sp" />
</RelativeLayout>