<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PieChartDailyActivity">

    <LinearLayout
        android:id="@+id/rootPieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date001" />

        <TextView
            android:id="@+id/tvDateDaily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_date" />

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/go"
            android:src="@drawable/ic_done_black_24dp" />
    </LinearLayout>


</RelativeLayout>