<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date001" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_date"
            android:inputType="number" />

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go"
            android:src="@drawable/ic_done_black_24dp" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/idPieChartDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"></com.github.mikephil.charting.charts.PieChart>

</RelativeLayout>