<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartMonthActivity">

    <LinearLayout
        android:id="@+id/rootPieChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month001" />

        <EditText
            android:id="@+id/tvMonthDaily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/select_month"
            android:inputType="number" />

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/go"
            android:src="@drawable/ic_done_black_24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>